--- a/491hw2/index.html
+++ b/491hw2/index.html
@@ -1,30 +1,19 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title> TCSS 491 - Viet Nguyen hw2 </title>
-    <style type="text/css" media="screen">
-        canvas, img {
-            display: block;
-            margin: 1em auto;
-            border: 1px solid black;
-        }
-    </style>
-    <script type="text/javascript" src="./gameengine.js"></script>
-    <script type="text/javascript" src="./assetmanager.js"></script>
-    <script type="text/javascript" src="./animations.js"></script>
-    <script type="text/javascript" src="./entities1.js"></script>
-    <script type="text/javascript" src="./main.js"></script>
-
+    <title> My Web Page</title>
 </head>
-<body style="background:lightblue">
-    <center> <h1> Tank vs. Helicopter </h1> </center>
-    <canvas id="gameWorld" tabindex="0" width="800" height="600" style="border: 1px solid brown; background: lightblue"></canvas>
-    <div>
-         <center>
-            <h3> TCSS 491 HW2</h3>
-        </center>
-    </div>
-</body>
+
+<center></center>
+<body style="background-color:black">
+    <img src="http://cdn.backyardchickens.com/8/8b/800x600px-LL-8b6c1def_068a_Golden_Pheasant_display.jpeg" align="left"> </>
+    <a href="http://cdn.backyardchickens.com/8/8b/800x600px-LL-8b6c1def_068a_Golden_Pheasant_display.jpeg">
+        <p style="text-align:center;background-color: yellow; font-size: 16px; font-family: Arial">My Style Paragraph Link</p>
+    </a>
+    <ol>
+        <li style="color:red; text-align:center"> Red Golden Pheasant</li>
+        <li style="color:silver; text-align:center"> Silver Pheasant</li>
+    </ol>
+
+</body></center>
 </html>
