--- a/profile/index.html
+++ b/profile/index.html
@@ -2,10 +2,30 @@
 <html>
 <head>
     <title> My Web Page</title>
+    <style>
+        body {
+            background-color: #6699FF;
+        }
+        h1 {
+            color: blue;
+        }
+        p {
+            color: green;
+        }
+    </style>
+
+    <style type="text/css" media="screen">
+        canvas, img {
+            display: block;
+            margin: 1em auto;
+            border: 1px solid black;
+        }
+    </style>
 </head>
 
-<center></center>
-<body style="background-color:black">
+
+<body>
+    <center></center><h1>Viet Thanh Nguyen</h1><center></center>
     <img src="http://cdn.backyardchickens.com/8/8b/800x600px-LL-8b6c1def_068a_Golden_Pheasant_display.jpeg" align="left"> </>
     <a href="http://cdn.backyardchickens.com/8/8b/800x600px-LL-8b6c1def_068a_Golden_Pheasant_display.jpeg">
         <p style="text-align:center;background-color: yellow; font-size: 16px; font-family: Arial">My Style Paragraph Link</p>
