--- a/profile/index.html
+++ b/profile/index.html
@@ -26,7 +26,7 @@
 
 <body>
     <center></center><h1>Viet Thanh Nguyen</h1><center></center>
-    <img src="http://cdn.backyardchickens.com/8/8b/800x600px-LL-8b6c1def_068a_Golden_Pheasant_display.jpeg" align="left"> </>
+    <img src="http://cdn.backyardchickens.com/8/8b/800x600px-LL-8b6c1def_068a_Golden_Pheasant_display.jpeg"> </>
     <a href="http://cdn.backyardchickens.com/8/8b/800x600px-LL-8b6c1def_068a_Golden_Pheasant_display.jpeg">
         <p style="text-align:center;background-color: yellow; font-size: 16px; font-family: Arial">My Style Paragraph Link</p>
     </a>
@@ -35,5 +35,5 @@
         <li style="color:silver; text-align:center"> Silver Pheasant</li>
     </ol>
 
-</body></center>
+</body>
 </html>
