--- a/profile/index.html
+++ b/profile/index.html
@@ -2,22 +2,7 @@
 <html>
 <head>
     <title> My Web Page</title>
-    <style>
-        body {
-            background-color: #d8d5d5;
-        }
-        h1 {
-            color: blue;
-        }
-        p {
-            color: green;
-        }
-        li {
-            color: green;
-            text-align:left;
-            font-size: 14px;
-        }
-    </style>
+    <link type="text/css" rel="stylesheet" href="styleSheet.css" />
 
     <!--<style type="text/css" media="screen">
         canvas, img {
@@ -31,13 +16,14 @@
 
 <body>
     <center>
+        <div style="background-color:orange; border:5px; height:50px; width:auto"></div>
         <h1>Viet Thanh Nguyen</h1>
-        <img src="http://cdn.backyardchickens.com/8/8b/800x600px-LL-8b6c1def_068a_Golden_Pheasant_display.jpeg"> </>
+        <img src="me.png"> </>
     </center>
 
-    <a href="http://cdn.backyardchickens.com/8/8b/800x600px-LL-8b6c1def_068a_Golden_Pheasant_display.jpeg">
-        <p style="text-align:center;background-color: yellow; font-size: 16px; font-family: Arial">My Style Paragraph Link</p>
-    </a>
+    
+        <p style="text-align:right;background-color: yellow; font-size: 16px; font-family: Arial"> .</p>
+  
 
     <!-- Academic List-->
     <ul>
@@ -86,6 +72,6 @@
             </ul>
         </li> 
     </ul>
-
+    <center><iframe width="554" height="320" src="videos/pheasantDance2.mp4" frameborder="0" allowfullscreen></iframe></center>
 </body>
 </html>
