--- a/profile/index.html
+++ b/profile/index.html
@@ -68,7 +68,7 @@
                     and
                     <a href="https://github.com/vnguyen15/vnguyen15.github.io/blob/master/DeanListLetter.pdf">Spring 1015</a>
                 </li>              
-                <li>Soccer(forward/defend) and Badmington</li>
+                <li>Soccer Team - East Side Soccer Club(forward/defend) and Badmington</li>
             </ul>
         </li> 
     </ul>
