Update Main page

--- a/index.html
+++ b/index.html
@@ -1,28 +1,73 @@
-
+﻿
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>Collect Eggs</title>
-    <style>
-        body {background-color: #6699FF;}
-        h1 {color: blue;}
-        p {color: green; }
-    </style>
-
-    <style type="text/css" media="screen">
+    <title> My Web Page</title>
+    <link type="text/css" rel="stylesheet" href="styleSheet.css" />
+    <!--<style type="text/css" media="screen">
         canvas, img {
             display: block;
             margin: 1em auto;
             border: 1px solid black;
         }
-    </style>
-    <script type="text/javascript" src="./gameengine.js"></script>
-    <script type="text/javascript" src="./assetmanager.js"></script>
-    <script type="text/javascript" src="./main.js"></script>
+    </style> -->
 </head>
+
 <body>
-    <center> <h1> Viet Nguyen </h1> </center>  
-    <canvas id="gameWorld" tabindex="1" width="630" height="750" style="border: 1px solid brown; background: lightskyblue"></canvas>
+    <center>
+        <div style="background-color:orange; border:5px; height:50px; width:auto"></div>
+        <h1 style="color:blue">Viet Nguyen<br />TCSS 598A<br />Sorting Algorithm Visualization</h1>
+        <p></p>
+        <p></p>
+        <img src="me.png"> </>
+    </center>
+
+    <p style="text-align:right;background-color: yellow; font-size: 16px; font-family: Arial"> .</p>
+
+    <center>
+        <table>
+            <thead>
+                <tr>
+                    <th></th>
+                    <th style="color:darkviolet; font-size:large"><center>Buildings-Random and Some Unique</center></th>
+                    <th style="color:darkviolet; font-size:large"><center>Pyramid-Half Sort and Half Reverse Sort</center></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><center>Selection Sort </center></td>
+                    <td><center><video width="300" height="188" controls muted autoplay> <source src="selectionSortR.mp4" type="video/mp4"></video></center></td>
+                    <td><center><video width="300" height="188" controls muted autoplay> <source src="selectionSortP.mp4" type="video/mp4"></video></center></td>
+                </tr>
+
+                <tr>
+                    <td><center>Insertion Sort</center></td>
+                    <td><center><iframe width="300" height="188" src="insertionSortR.mp4" frameborder="0" allowfullscreen></iframe></center></td>
+                    <td><center><iframe width="300" height="188" src="insertionSortP.mp4" frameborder="0" allowfullscreen></iframe></center></td>
+                </tr>
+                <tr>
+                    <td><center>Bubble Sort</center></td>
+                    <td><center><iframe width="300" height="188" src="bubbleSortR.mp4" frameborder="0" allowfullscreen></iframe></center></td>
+                    <td><center><iframe width="300" height="188" src="bubbleSortP.mp4" frameborder="0" allowfullscreen></iframe></center></td>
+                </tr>
+                <tr>
+                    <td><center>Merge Sort</center></td>
+                    <td><center><iframe width="300" height="188" src="mergeSortR.mp4" frameborder="0" allowfullscreen></iframe></center></td>
+                    <td><center><iframe width="300" height="188" src="mergeSortP1.mp4" frameborder="0" allowfullscreen></iframe></center></td>
+                </tr>
+                <tr>
+                    <td><center>Quick Sort </center></td>
+                    <td><center><video width="300" height="188" controls muted autoplay> <source src="quickSortR.mp4" type="video/mp4"></video></center></td>
+                    <td><center><video width="300" height="188" controls muted autoplay> <source src="quickSortP.mp4" type="video/mp4"></video></center></td>
+                </tr>
+            </tbody>
+        </table>
+        <a href=""<p>My GitHub</p>
+        <p><strong>References:</strong></p>
+        <a href="https://github.com/vbohush/SortingAlgorithmAnimations"><p>GUI and Viualization Demonstration</p></a>
+        <p></p>
+        <p>********</p>
+    </center>
+    <!-- Academic List-->
 </body>
 </html>
