--- a/profile/sortvisual.html
+++ b/profile/sortvisual.html
@@ -62,7 +62,7 @@
                 </tr>
             </tbody>
         </table>
-        <a href="https://github.com/vnguyen15/vnguyen15.github.io/tree/master/profile"<p>My GitHub</p>
+        <a href="https://github.com/vnguyen15/vnguyen15.github.io/tree/https-/github.com/vnguyen15/vnguyen15.github.io.git/profile"<p>My GitHub</p>
         <p><strong>References:</strong></p>
         <a href="https://github.com/vbohush/SortingAlgorithmAnimations"><p>GUI and Viualization Demonstration</p></a>
         <p></p>
