--- a/profile/sortvisual.html
+++ b/profile/sortvisual.html
@@ -39,7 +39,9 @@
                     <td><center><video width="300" height="188" controls muted autoplay> <source src="selectionSortR.mp4" type="video/mp4"></video></center></td>
                     <td><center><video width="300" height="188" controls muted autoplay> <source src="selectionSortP.mp4" type="video/mp4"></video></center></td>
                 </tr>
-                 <th colspan="1">start from the left and compare all the right value and update if next value is smaller</th>
+                <tr>
+                    <td colspan="1">start from the left and compare all the right value and update if next value is smaller</td>
+                </tr>
                 <tr>
                     <td><center>Insertion Sort</center></td>
                     <td><center><iframe width="300" height="188" src="insertionSortR.mp4" frameborder="0" allowfullscreen></iframe></center></td>
