--- a/profile/sortvisual.html
+++ b/profile/sortvisual.html
@@ -92,7 +92,7 @@
 
 
         <p></p>
-        <p>**************************************</p>
+        <div style="background-color:green; border:5px; height:25px; width:auto"></div>
         <p></p>
         <a href="https://github.com/vnguyen15/vnguyen15.github.io/tree/https-/github.com/vnguyen15/vnguyen15.github.io.git/profile"<p style="font-size:larger"><strong>My GitHub(source codes and videos)</strong></p>
         <p><strong>References:</strong></p>
