--- a/profile/sortvisual.html
+++ b/profile/sortvisual.html
@@ -95,7 +95,7 @@
         <div style="background-color:green; border:5px; height:25px; width:auto"></div>
         <p></p>
         <a href="https://github.com/vnguyen15/vnguyen15.github.io/tree/https-/github.com/vnguyen15/vnguyen15.github.io.git/profile"<p style="font-size:larger"><strong>My GitHub(source codes and videos)</strong></p>
-        <p><strong>References:</strong></p>
+        <p><strong>Reference & Credit:</strong></p>
         <a href="https://github.com/vbohush/SortingAlgorithmAnimations"><p>GUI and Viualization Demonstration</p></a>
         <p></p>
         <p>**************************************</p>
