--- a/profile/sortvisual.html
+++ b/profile/sortvisual.html
@@ -16,9 +16,9 @@
 <body>
     <center>
         <div style="background-color:orange; border:5px; height:50px; width:auto"></div>
-        <h1 style="color:blue">Viet Nguyen<br />TCSS 598A - Fall 2015<br />Prof. Ali <br />Sorting Algorithm Visualization</h1>
-        <p></p>
-        <p></p>
+        <h1>Viet Nguyen<br />TCSS 598A - Fall 2015<br /> </h1>
+        <h2 style="color:blue"> Sorting Algorithm Visualization</h2>
+
        <!-- <img src="me.png"> </> --> 
     </center>
 
