--- a/profile/sortvisual.html
+++ b/profile/sortvisual.html
@@ -16,8 +16,8 @@
 <body>
     <center>
         <div style="background-color:orange; border:5px; height:50px; width:auto"></div>
-        <h1>Viet Nguyen<br />TCSS 598A - Fall 2015<br /> </h1>
-        <h2 style="color:blue"> Sorting Algorithm Visualization</h2>
+        <h1 style="color:black">Viet Nguyen<br />TCSS 598A - Fall 2015</h1>
+        <h2> Sorting Algorithm Visualization</h2>
 
        <!-- <img src="me.png"> </> --> 
     </center>
