--- a/profile/sortvisual.html
+++ b/profile/sortvisual.html
@@ -17,7 +17,7 @@
     <center>
         <div style="background-color:orange; border:5px; height:50px; width:auto"></div>
         <h1 style="color:black">Viet Nguyen<br />TCSS 598A - Fall 2015</h1>
-        <h2> Sorting Algorithm Visualization</h2>
+        <h2 style="color:blue"> Sorting Algorithm Visualization</h2>
 
        <!-- <img src="me.png"> </> --> 
     </center>
