--- a/profile/sortvisual.html
+++ b/profile/sortvisual.html
@@ -38,7 +38,7 @@
             <tbody>
                 <tr>
                     <td><center><strong>Selection Sort</strong> </center></td>
-                    <td><center><video width="300" height="188" controls muted autoplay> <source src="selectionSortR.mp4" type="video/mp4"></video></center></td>
+                    <td><center><video width="300" height="188" controls muted autoplay> <source src="jellyfish.kmv" type="video/mp4"></video></center></td>
                     <td><center><video width="300" height="188" controls muted autoplay> <source src="selectionSortP.mp4" type="video/mp4"></video></center></td>
                     <td><center><video width="300" height="188" controls muted autoplay> <source src="selectionSortStair.mp4" type="video/mp4"></video></center></td>
                 </tr>
